feat: add checkout flow with services, business logic, and controller